--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,11 +2,6 @@ spring:
   application:
     name: temporal-jetstream
 
-  # MongoDB Configuration
-  data:
-    mongodb:
-      uri: mongodb://localhost:27017/temporal-jetstream
-
   # Kafka Configuration
   kafka:
     bootstrap-servers: localhost:9092
@@ -18,6 +13,11 @@ spring:
     producer:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.apache.kafka.common.serialization.StringSerializer
+    # MongoDB Configuration
+
+  mongodb:
+    uri: mongodb://localhost:27017/temporal-jetstream
+    database: temporal-jetstream
 
 # Server Configuration
 server:
